style.css
body {
    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
    font-size: 18px;
    line-height: 34px;
    color: #777777;
    background: url("../images/concrete_seamless.png");
  }
  
  * {
    box-sizing: border-box;
  }
  
  /* general */
  
  .container {
    width: 100%;
    max-width: 960px;
    margin: 0 auto;
    clear: both;
  }
  
  h1,
  h2,
  h3,
  p {
    margin-bottom: 20px;
  }
  
  p:last-child {
    margin-bottom: 0;
  }
  
  h1,
  h2,
  h3 {
    font-family: Georgia, Times, "Times New Roman", serif;
    font-weight: 700;
    color: #4aaaa5;
  }
  
  h1 {
    padding-bottom: 20px;
    font-size: 30px;
    line-height: 49px;
    border-bottom: 3px solid #dddddd;
  }
  
  h2,
  h3 {
    font-size: 22px;
  }
  
  /* header */
  
  #masthead {
    position: fixed;
    z-index: 99;
    width: 100%;
    margin: 0 0 30px;
    overflow: auto;
    color: #ffffff;
    background: #ffffff;
    border-bottom: 2px solid #cccccc;
  }
  
  #logo {
    float: left;
    width: 250px;
    height: 90px;
    font-family: Georgia, Times, "Times New Roman", serif;
    font-size: 30px;
    font-weight: 700;
    line-height: 90px;
    color: #ffffff;
    text-align: center;
    text-decoration: none;
    background: #4aaaa5;
  }
  
  nav {
    float: right;
    margin-top: 25px;
  }
  
  nav a {
    display: inline-block;
    padding-left: 15px;
    margin-left: 15px;
    line-height: 18px;
    color: #999;
    text-decoration: none;
    border-left: 1px solid #efefef;
  }
  
  nav a:first-child {
    border-left: 0 none;
  }
  
  /* footer */
  
  footer {
    padding: 30px 0;
    clear: both;
    font-size: 12px;
    color: #ffffff;
    color: #cccccc;
    text-align: center;
    background: #666666;
    border-top: 8px solid #4aaaa5;
    height: 50px;
  }
  
  h3, h2 {
    padding-bottom: 20px;
    margin-bottom: 15px;
    line-height: 22px;
    border-bottom: 2px solid #eeeeee;
  }
  
  /* main */
  
  #main-container {
    padding-top: 130px;
    min-height: calc(100vh - 70px);
  }
  
  .main-section {
    float: left;
    width: 100%;
    max-width: 960px;
    padding: 30px;
    margin: 0 0 40px;
    background: #ffffff;
    border: 1px solid #dddddd;
  }
  
  /* portfolio page */
  
  .work {
    position: relative;
    float: left;
    width: 274px;
    margin: 20px 0 25px;
    overflow: auto;
  }
  
  .work:nth-child(even) {
    margin-right: 40px;
  }
  
  .work img {
    width: 100%;
    border: 0 none;
    opacity: 0.8;
  }
  
  .work h3 {
    position: absolute;
    bottom: 20px;
    width: 100%;
    padding: 15px;
    margin-bottom: 0;
    font-weight: 300;
    line-height: 30px;
    color: #ffffff;
    text-align: center;
    background: #4aaaa5;
    border-bottom: 0;
  }
  
  .auth-image {
    float: left;
    width: 200px;
    height: auto;
    margin-top: 10px;
    margin-right: 25px;
  }
  
  /* contact page */
  
  #contact-form ul {
    margin-bottom: 20px;
  }
  
  #contact-form li {
    margin-bottom: 10px;
  }
  
  label,
  input[type=text],
  input[type=email],
  textarea {
    display: block;
    width: 100%;
  }
  
  input[type=text],
  input[type=email],
  textarea {
    height: 35px;
    padding: 0 10px;
    font-size: 14px;
    border: 1px solid #dddddd;
  }
  
  textarea {
    height: 200px;
  }
  
  input[type=submit] {
    padding: 10px 30px;
    font-size: 18px;
    color: #ffffff;
    cursor: pointer;
    background: #4aaaa5;
    border: 0 none;
  }
  
@media screen and (max-width: 980px) {
  nav {
  margin-right: 5px;
  }
}

@media screen and (max-width: 768px) {
  #masthead {
    margin-right: -25px;
    margin-left: -20px;
  }
}

  .main-section,
  .sidebar {
    max-width: 95%;
    margin-bottom: 5px;
    margin-left: 10px;
    margin-right: 10px;
  }

  main {
    overflow: auto;
  }

  .work {
    width: 45%;
    margin-bottom: 20px;
  }
  .auth-image {
    width: 50%;
  }
}

@media screen and (max-width: 640px) {
  #masthead {
    position: static;
    margin-bottom: 20px;
  }
}
nav {
  width: 100%;
  text-align: center;
  margin: 40px;
}
  #main-container {
    padding-top: 200px;
  }

  .auth-image {
    width: 100%;
  }

  .work {
    width: 100%;
  }

  #logo {
    width: 100%;
    text-align: center;
  }

 #contact-form {
   width: 90%;
   height: 50%;
 }
  
  .container {
    padding: 0%;
  }

  .main-section,
  .sidebar {
    max-width: 90%;
    margin-bottom: 5px;
    margin-left: 10px;
    margin-right: 10px;
    padding: 5px;
  }

